--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-three/cannon": "^4.0.1",
+    "@react-three/drei": "^7.14.1",
     "@react-three/fiber": "^7.0.15",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
